app-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: springboot-postgres-deployment
#spec:
#  selector:
#    matchLabels:
#      app: springboot-k8s-postgres
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: springboot-k8s-postgres

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend
spec:
  selector:
    matchLabels:
      app: demo-backend
  replicas: 3
  template:
    metadata:
      labels:
        app: demo-backend
    spec:
      containers:
        - name: postgresdbapp
          image: docker.io/shadythedecipher/kikundiwebapp:2.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              value: postgres
#              valueFrom :
#                configMapKeyRef :
#                  name : db-config
#                  key :  host

            - name: DB_NAME  # Setting Database name from configMap
              value: kikundi
#              valueFrom :
#                configMapKeyRef :
#                  name : db-config
#                  key :  dbName

            - name: DB_USERNAME  # Setting Database username from Secret
              value: postgres
#              valueFrom :
#                secretKeyRef :
#                  name : postgres-secrets
#                  key :  username

            - name: DB_PASSWORD # Setting Database password from Secret
              value: shady987654321
#              valueFrom :
#                secretKeyRef :
#                  name : postgres-secrets
#                  key :  password
