pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgres #This is the path in the container on which the mounting will take place.
      volumes:
        - name: postgres-persistent-storage # Obtaining 'vloume' from PVC
          persistentVolumeClaim:
            claimName: postgres-pv-claim
