spring-service.yaml
#apiVersion: v1 # Kubernetes API version
#kind: Service
#metadata: # Metadata of the resource kind we are creating
#  name: spring-test-service
#spec:
#  selector:
#    app: spring-test-app
#  ports:
#    - protocol: TCP
#      port: 8080 # The port that the service is running on in the cluster
#      targetPort: 8080 # The port exposed by the service
#  type: ClusterIP # type of the service. LoadBalancer indicates that our service will be external.

apiVersion: v1 # Kubernetes API version
kind: Service
metadata: # Metadata of the resource kind we are creating
  name: demo-backend
spec:
  selector:
    app: demo-backend
  ports:
    - protocol: TCP
      port: 8080 # The port that the service is running on in the cluster
      targetPort: 8080 # The port exposed by the service
  type: ClusterIP # type of the service. LoadBalancer indicates that our service will be external.
